Bug fix: Columns were not balancing  properly on Firefox New tis post

--- a/index.css
+++ b/index.css
@@ -171,6 +171,12 @@ body.dark {
   float:left;
 }
 
+@-moz-document url-prefix() {
+  .tis {
+      float: none;
+  }
+}
+
 .tis > div {
   padding: 5px;
 }
